@@ -1,3 +1,5 @@
+* BUG#8139 Ajout d'un exemple de codification de réseau de distribution dans le jeu d'essai
+
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
 
