@@ -1,3 +1,5 @@
+* BUG#8139 Add an example of distribution network codification in test case
+
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
 
